--- a/login_y_registro/pubspec.yaml
+++ b/login_y_registro/pubspec.yaml
@@ -19,6 +19,8 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
+  http: ^0.13.4
+  fluttertoast: ^8.0.9
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -37,6 +39,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^0.13.4
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
