--- a/login_y_registro/pubspec.yaml
+++ b/login_y_registro/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.16.1 <3.0.0"
   http: ^0.13.4
   fluttertoast: ^8.0.9
+  image_picker: ^0.8.4+11
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -41,6 +42,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   fluttertoast: ^8.0.9
+  image_picker: ^0.8.4+11
 
 dev_dependencies:
   flutter_test:
