--- a/login_y_registro/pubspec.yaml
+++ b/login_y_registro/pubspec.yaml
@@ -69,8 +69,15 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/logo.PNG
-  #   - images/a_dot_ham.jpeg
+    - assets/logo.PNG
+    - assets/images/arqui.png
+    - assets/images/andres.png
+    - assets/images/comida.png
+    - assets/images/daniel.png
+    - assets/images/equitacion.png
+    - assets/images/libardo.png
+    - assets/images/sebastian.png
+    #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
