--- a/login_y_registro/pubspec.yaml
+++ b/login_y_registro/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter_html: ^2.2.1
   flutter:
     sdk: flutter
   font_awesome_flutter:
